diensten z-index fix

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ input[type=submit]:hover {
 }
 
 header {
-	z-index: 100;
+	z-index: 101;
 	position: absolute;
 	width: 100%;
 }
@@ -229,7 +229,7 @@ header {
 	position: fixed;
 	top: -80%;
 	left: 0;
-	z-index: 99;
+	z-index: 100;
 	opacity: 0;
 	transition: all .3s ease-in;
 }
